tests/ui/parser/misspelled-keywords/use.rs
usee a::b;
//~^ ERROR expected one of

fn main() {}
